--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -861,8 +861,8 @@ script:
           auto original_color = target_led->get(led_index).get();
           ESP_LOGD("button", "button %d press at LED %d, color was %d %d %d", button, led_index, original_color.r, original_color.g, original_color.b);
           id(original_led_color)[led_index-1] = original_color;
-          auto color = double_tap ? double_tap_color : touch_color;
-          target_led->get(led_index).set(esphome::Color(id(color)[0], id(color)[1], id(color)[2]));
+          auto color = double_tap ? id(double_tap_color) : id(touch_color);
+          target_led->get(led_index).set(esphome::Color(color[0], color[1], color[2]));
 
   - id: bars_go_up_and_down
     mode: restart
