--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -957,10 +957,22 @@ script:
             ESP_LOGI("button", "double tap on button %d", button);
             id(led_on_button_press)->execute(button, true);
             switch(button) {
-              case 1: id(double_tap_1).publish_state(true); break;
-              case 2: id(double_tap_2).publish_state(true); break;
-              case 3: id(double_tap_3).publish_state(true); break;
-              case 4: id(double_tap_4).publish_state(true); break;
+              case 1: 
+                id(double_tap_1).publish_state(true);
+                id(dim_led_at_button_1)->execute(is_long_press);
+                break;
+              case 2:
+                id(double_tap_2).publish_state(true);
+                id(dim_led_at_button_2)->execute(is_long_press);
+                break;
+              case 3:
+                id(double_tap_3).publish_state(true);
+                id(dim_led_at_button_3)->execute(is_long_press);
+                break;
+              case 4:
+                id(double_tap_4).publish_state(true);
+                id(dim_led_at_button_4)->execute(is_long_press);
+                break;
             }
           } else {
             switch(button) {
