--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -705,6 +705,7 @@ tx_ultimate_touch:
         auto button_press_duration = millis() - id(button_press_start_time)[button-1];
         ESP_LOGD("button", "Button %d released, held for %u ms", button, button_press_duration);
         bool is_long_press = false;
+        boolea is_double_tap = false;
         if (button_press_duration >= ${long_press_time}) {
           is_long_press = true;
           ESP_LOGD("button", "Button %d long pressed", button);
@@ -716,13 +717,24 @@ tx_ultimate_touch:
           }
         } else {
           id(button_double_tap)[button-1]++;
-          id(possible_double_tap)->execute(button);
+          if (id(button_double_tap)[button-1]>1) {
+            is_double_tap = true;
+            id(process_double_tap)->execute(button);
+            id(button_double_tap)[button-1]=0;
+          } else {
+            switch(button) {
+              case 1: id(button_1).publish_state(true); break;
+              case 2: id(button_2).publish_state(true); break;
+              case 3: id(button_3).publish_state(true); break;
+              case 4: id(button_4).publish_state(true); break;
+            }
+          }
         }
         switch(button) {
-          case 1: id(dim_led_at_button_1)->execute(is_long_press); break;
-          case 2: id(dim_led_at_button_2)->execute(is_long_press); break;
-          case 3: id(dim_led_at_button_3)->execute(is_long_press); break;
-          case 4: id(dim_led_at_button_4)->execute(is_long_press); break;
+          case 1: id(dim_led_at_button_1)->execute(is_long_press, is_double_tap); break;
+          case 2: id(dim_led_at_button_2)->execute(is_long_press, is_double_tap); break;
+          case 3: id(dim_led_at_button_3)->execute(is_long_press, is_double_tap); break;
+          case 4: id(dim_led_at_button_4)->execute(is_long_press, is_double_tap); break;
         }
     - lambda: >
         ESP_LOGW("button", "Release Position: %d / State: %d", touch.x, touch.state);
@@ -867,10 +879,12 @@ script:
     then:
       - lambda: |-
           auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-          auto original_color = target_led->get(led_index).get();
-          id(original_led_color)[led_index-1] = original_color;
+          if (!double_tap) {
+            auto original_color = target_led->get(led_index).get();
+            id(original_led_color)[led_index-1] = original_color;
+          }
           auto color = double_tap ? id(double_tap_color) : id(touch_color);
-          ESP_LOGD("button", "button %d press at LED %d, original color was %d %d %d, new color is %d %d %d ", button, led_index, original_color.r, original_color.g, original_color.b, color[0], color[1], color[2]);
+          ESP_LOGD("button", "button %d press internal at LED %d, set color to %d %d %d ", button, led_index, color[0], color[1], color[2]);
           target_led->get(led_index).set(esphome::Color(color[0], color[1], color[2]));
 
   - id: bars_go_up_and_down
@@ -951,45 +965,36 @@ script:
             target_led->schedule_show();
           }
 
-  - id: possible_double_tap
+  - id: process_double_tap
     mode: parallel
     parameters:
       button: int
     then:
       - delay: ${double_tap_timeout}
       - lambda: |-
-          if (id(button_double_tap)[button-1]>1) {
-            ESP_LOGW("button", "Double tap at button %d", button);
-            // TODO fix this, it's hacky:
-            id(button_press_start_time)[button-1] = 0;
-            id(led_on_button_press)->execute(button, true);
-            switch(button) {
-              case 1: 
-                id(double_tap_1).publish_state(true);
-                id(dim_led_at_button_1)->execute(false);
-                break;
-              case 2:
-                id(double_tap_2).publish_state(true);
-                id(dim_led_at_button_2)->execute(false);
-                break;
-              case 3:
-                id(double_tap_3).publish_state(true);
-                id(dim_led_at_button_3)->execute(false);
-                break;
-              case 4:
-                id(double_tap_4).publish_state(true);
-                id(dim_led_at_button_4)->execute(false);
-                break;
-            }
-          } else {
-            switch(button) {
-              case 1: id(button_1).publish_state(true); break;
-              case 2: id(button_2).publish_state(true); break;
-              case 3: id(button_3).publish_state(true); break;
-              case 4: id(button_4).publish_state(true); break;
-            }
+          ESP_LOGW("button", "Double tap at button %d", button);
+          // TODO fix this, it's hacky:
+          id(button_press_start_time)[button-1] = 0;
+          id(led_on_button_press)->execute(button, true);
+          switch(button) {
+            case 1: 
+              id(double_tap_1).publish_state(true);
+              // FIXME another event code path dims the leds, maybe on_press after the delay?
+              //id(dim_led_at_button_1)->execute(false);
+              break;
+            case 2:
+              id(double_tap_2).publish_state(true);
+              //id(dim_led_at_button_2)->execute(false);
+              break;
+            case 3:
+              id(double_tap_3).publish_state(true);
+              //id(dim_led_at_button_3)->execute(false);
+              break;
+            case 4:
+              id(double_tap_4).publish_state(true);
+              //id(dim_led_at_button_4)->execute(false);
+              break;
           }
-          id(button_double_tap)[button-1]=0;
 
   - id: short_vibration
     then:
@@ -1003,15 +1008,23 @@ script:
       iteration: int
       led_index: int
       is_long_press: bool
+      is_double_tap: bool
     then:
       - lambda: |-
-          auto original_color = id(original_led_color)[led_index-1];
-          auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
+          auto to_color = id(original_led_color)[led_index-1];
+          esphome::Color from_color;
+          if (is_long_press) {
+            from_color = id(long_press_color);
+          } else if (is_double_tap) {
+            from_color = id(double_tap_color);
+          } else {
+            from_color = touch_color;
+          }
           float factor = iteration * 0.1f;
           auto color = esphome::Color(
-            dim_color[0]*(1.0-factor) + original_color.r*factor,
-            dim_color[1]*(1.0-factor) + original_color.g*factor,
-            dim_color[2]*(1.0-factor) + original_color.b*factor
+            from_color[0]*(1.0-factor) + to_color.r*factor,
+            from_color[1]*(1.0-factor) + to_color.g*factor,
+            from_color[2]*(1.0-factor) + to_color.b*factor
           );
           static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->get(led_index).set(color);
 
@@ -1022,6 +1035,7 @@ script:
     mode: restart
     parameters:
       is_long_press: bool
+      is_double_tap: bool
     then:
       - delay: ${after_touch_dim_delay}
       - repeat:
@@ -1037,7 +1051,7 @@ script:
                     case 2: led_index = 15 - 4*button; break;
                     case 1: led_index = 9; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 if (${button_led_feedback_top}) {
                   switch(${button_count}) {
@@ -1046,7 +1060,7 @@ script:
                     case 2: led_index = 17 + 4*button; break;
                     case 1: led_index = 23; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
@@ -1071,7 +1085,7 @@ script:
                     case 2: led_index = 15 - 4*button; break;
                     case 1: led_index = 9; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 if (${button_led_feedback_top}) {
                   switch(${button_count}) {
@@ -1080,7 +1094,7 @@ script:
                     case 2: led_index = 17 + 4*button; break;
                     case 1: led_index = 23; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
@@ -1105,7 +1119,7 @@ script:
                     case 2: led_index = 15 - 4*button; break;
                     case 1: led_index = 9; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 if (${button_led_feedback_top}) {
                   switch(${button_count}) {
@@ -1114,7 +1128,7 @@ script:
                     case 2: led_index = 17 + 4*button; break;
                     case 1: led_index = 23; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
@@ -1139,7 +1153,7 @@ script:
                     case 2: led_index = 15 - 4*button; break;
                     case 1: led_index = 9; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 if (${button_led_feedback_top}) {
                   switch(${button_count}) {
@@ -1148,7 +1162,7 @@ script:
                     case 2: led_index = 17 + 4*button; break;
                     case 1: led_index = 23; break;
                   }
-                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press, is_double_tap);
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
@@ -1213,18 +1227,22 @@ script:
       - script.execute:
           id: dim_led_at_button_4
           is_long_press: false
+          is_double_tap: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_3
           is_long_press: false
+          is_double_tap: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_2
           is_long_press: false
+          is_double_tap: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_1
           is_long_press: false
+          is_double_tap: false
 
   - id: led_on_swipe_right
     mode: restart
@@ -1257,18 +1275,22 @@ script:
       - script.execute:
           id: dim_led_at_button_1
           is_long_press: false
+          is_double_tap: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_2
           is_long_press: false
+          is_double_tap: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_3
           is_long_press: false
+          is_double_tap: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_4
           is_long_press: false
+          is_double_tap: false
 
   - id: led_on_full_touch
     mode: restart
@@ -1285,15 +1307,19 @@ script:
       - script.execute:
           id: dim_led_at_button_1
           is_long_press: false
+          is_double_tap: false
       - script.execute:
           id: dim_led_at_button_2
           is_long_press: false
+          is_double_tap: false
       - script.execute:
           id: dim_led_at_button_3
           is_long_press: false
+          is_double_tap: false
       - script.execute:
           id: dim_led_at_button_4
           is_long_press: false
+          is_double_tap: false
       - delay: 5s
       - light.turn_off: leds_top
 
