--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -705,6 +705,7 @@ tx_ultimate_touch:
         id(button_held)[button-1]=0;
         auto button_press_duration = millis() - id(button_press_start_time)[button-1];
         ESP_LOGD("button", "Button %d released, held for %u ms", button, button_press_duration);
+        id(button_press_start_time)[button-1] = 0;
         bool is_long_press = false;
         bool is_double_tap = false;
         if (button_press_duration >= ${long_press_time}) {
@@ -830,11 +831,11 @@ script:
               }
               id(led_on_button_press_internal)->execute(button, led_index, double_tap);
             }
-            id(button_press_start_time)[button-1] = millis();
             static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
           } else {
             ESP_LOGI("button", "button %d pressed before fade completed", button);
           }
+          id(button_press_start_time)[button-1] = millis();
       - if:
           condition:
             - lambda: 'return !double_tap;'
@@ -985,7 +986,7 @@ script:
       - lambda: |-
           ESP_LOGW("button", "Double tap at button %d", button);
           // TODO fix this, it's hacky:
-          id(button_press_start_time)[button-1] = 0;
+          //id(button_press_start_time)[button-1] = 0;
           id(led_on_button_press)->execute(button, true);
           switch(button) {
             case 1: 
@@ -1075,7 +1076,7 @@ script:
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_led_step_delay}
-      - lambda: 'id(button_press_start_time)[0] = 0;'
+#     - lambda: 'id(button_press_start_time)[0] = 0;'
 
   - id: dim_led_at_button_2
     mode: restart
@@ -1110,7 +1111,7 @@ script:
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_led_step_delay}
-      - lambda: 'id(button_press_start_time)[1] = 0;'
+#     - lambda: 'id(button_press_start_time)[1] = 0;'
 
   - id: dim_led_at_button_3
     mode: restart
@@ -1145,7 +1146,7 @@ script:
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_led_step_delay}
-      - lambda: 'id(button_press_start_time)[2] = 0;'
+#     - lambda: 'id(button_press_start_time)[2] = 0;'
 
   - id: dim_led_at_button_4
     mode: restart
@@ -1180,7 +1181,7 @@ script:
                 }
                 static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_led_step_delay}
-      - lambda: 'id(button_press_start_time)[3] = 0;'
+#     - lambda: 'id(button_press_start_time)[3] = 0;'
 
   - id: refresh_nightlight
     mode: restart
