--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -760,6 +760,7 @@ tx_ultimate_touch:
     - lambda: >
         ESP_LOGD("button", "Swipe Right Position: %d / State: %d", touch.x, touch.state);
 
+# TODO rename this from full to multi
   on_full_touch_release:
     - script.execute: led_on_full_touch
     - switch.turn_on: vibra
@@ -767,16 +768,7 @@ tx_ultimate_touch:
         id: multi_touch
         state: ON
     - lambda: >
-        ESP_LOGD("button", "Full Touch Release Position: %d / State: %d", touch.x, touch.state);
-
-  on_multi_touch_release:
-    - script.execute: led_on_full_touch
-    - switch.turn_on: vibra
-    - binary_sensor.template.publish:
-        id: multi_touch
-        state: ON
-    - lambda: >
-        ESP_LOGD("button", "Full Touch Release Position: %d / State: %d", touch.x, touch.state);
+        ESP_LOGD("button", "Multi Touch Release Position: %d / State: %d", touch.x, touch.state);
 
   on_long_touch_release:
     - if:
