--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -907,14 +907,13 @@ script:
                   ESP_LOGI("button", "button %d no longer held in up and down", button);
                   // TODO may be better to fade the bars out instead of turning them off
                   id(set_bar_height).execute(0);
-                  iteration = 100;
-                  //id(bars_go_up_and_down).stop();
+                  id(bars_go_up_and_down).stop();
                 } else {
                   int bar_height = id(button_bar_brightness)[button-1];
                   ESP_LOGI("button", "button %d bar adjusting %d, height is %d", button, id(button_bar_flipper)[button-1], bar_height);
                   if (bar_height == 7) {
                     id(button_bar_flipper)[button-1] = -1;
-                  } else if (bar_height == 0) {
+                  } else if (bar_height == 1) {
                     id(button_bar_flipper)[button-1] = 1;
                   }
                   id(button_bar_brightness)[button-1]+=id(button_bar_flipper)[button-1];
