--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -192,6 +192,7 @@ external_components:
       url: https://github.com/duncati/sonoff-tx-ultimate-for-esphome
       ref: main
     components: [tx_ultimate_touch]
+# plug my github repo in here to override the components directory
 
 globals:
   - id: nightlight_color
@@ -770,6 +771,7 @@ tx_ultimate_touch:
     - lambda: >
         ESP_LOGD("button", "Multi Touch Release Position: %d / State: %d", touch.x, touch.state);
 
+# This is a lie. This is not a release, this is holding the pad for >5s. I can still be touching the pad when this triggers. Worse yet, a real release is never sent. :/
   on_long_touch_release:
     - lambda: 'ESP_LOGD("button", "Very Long Touch Release Position: %d / State: %d", touch.x, touch.state);'
     - if:
