--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -192,6 +192,7 @@ external_components:
       url: https://github.com/duncati/sonoff-tx-ultimate-for-esphome
       ref: main
     components: [tx_ultimate_touch]
+    refresh: 60s
 # plug my github repo in here to override the components directory
 
 globals:
