--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -192,8 +192,8 @@ external_components:
       url: https://github.com/duncati/sonoff-tx-ultimate-for-esphome
       ref: main
     components: [tx_ultimate_touch]
+    # this makes my cpp changes recompile
     refresh: 0s
-# plug my github repo in here to override the components directory
 
 globals:
   - id: nightlight_color
