--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -705,6 +705,7 @@ tx_ultimate_touch:
     - lambda: |-
         auto button = id(button_lookup)[${button_count}-1][touch.x-1];
         id(button_held)[button-1]=0;
+        // this will be wrong once every 49.7 days when millis() resets to 0 *shrug*
         uint32_t button_press_duration = millis() - id(button_press_start_time)[button-1];
         ESP_LOGD("button", "Button %d released, held for %lu ms (%lu - %lu)", button, button_press_duration, millis(), id(button_press_start_time)[button-1]);
         bool is_long_press = false;
