--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -45,7 +45,7 @@ substitutions:
   very_long_press_effect: "Scan"
 
   long_press_color: "{0,100,0}"
-  long_press_time: "1000"
+  long_press_time: "500"
 
   multi_touch_brightness: "1"
   multi_touch_color: "{0,0,0}"
@@ -406,6 +406,7 @@ binary_sensor:
     name: "Long Press 1"
     id: long_press_1
     on_press:
+      - script.stop: led_on_button_press
       - delay: ${button_on_time}
       - binary_sensor.template.publish:
           id: long_press_1
@@ -442,10 +443,13 @@ binary_sensor:
     name: "Very Long Press"
     id: very_long_press
     on_press:
-      - delay: ${button_on_time}
-      - binary_sensor.template.publish:
-          id: very_long_press
-          state: OFF
+      - scripte.execute: handle_on_release
+        x: touch.x
+        state: touch.state
+#     - delay: ${button_on_time}
+#     - binary_sensor.template.publish:
+#         id: very_long_press
+#         state: OFF
 
 switch:
   - platform: gpio
@@ -702,48 +706,9 @@ tx_ultimate_touch:
   on_release:
     - lambda: 'ESP_LOGI("button", "on_release stopping led_on_button_press and bar_go_up_and_down");'
     - script.stop: led_on_button_press
-    - lambda: |-
-        auto button = id(button_lookup)[${button_count}-1][touch.x-1];
-        id(button_held)[button-1]=0;
-        // this will be wrong once every 49.7 days when millis() resets to 0 *shrug*
-        uint32_t button_press_duration = millis() - id(button_press_start_time)[button-1];
-        ESP_LOGD("button", "Button %d released, held for %lu ms (%lu - %lu)", button, button_press_duration, millis(), id(button_press_start_time)[button-1]);
-        bool is_long_press = false;
-        bool is_double_tap = false;
-        if (button_press_duration >= ${long_press_time}) {
-          is_long_press = true;
-          ESP_LOGD("button", "Button %d long pressed", button);
-          switch(button) {
-            case 1: id(long_press_1).publish_state(true); break;
-            case 2: id(long_press_2).publish_state(true); break;
-            case 3: id(long_press_3).publish_state(true); break;
-            case 4: id(long_press_4).publish_state(true); break;
-          }
-        } else {
-          id(button_double_tap)[button-1]++;
-          id(double_tap_timer)->execute(button);
-          // TODO maybe add triple tap?
-          if (id(button_double_tap)[button-1]>1) {
-            is_double_tap = true;
-            id(process_double_tap)->execute(button);
-            id(button_double_tap)[button-1]=0;
-          } else {
-            switch(button) {
-              case 1: id(button_1).publish_state(true); break;
-              case 2: id(button_2).publish_state(true); break;
-              case 3: id(button_3).publish_state(true); break;
-              case 4: id(button_4).publish_state(true); break;
-            }
-          }
-        }
-        switch(button) {
-          case 1: id(dim_led_at_button_1)->execute(is_long_press, is_double_tap); break;
-          case 2: id(dim_led_at_button_2)->execute(is_long_press, is_double_tap); break;
-          case 3: id(dim_led_at_button_3)->execute(is_long_press, is_double_tap); break;
-          case 4: id(dim_led_at_button_4)->execute(is_long_press, is_double_tap); break;
-        }
-    - lambda: >
-        ESP_LOGW("button", "Release Position: %d / State: %d", touch.x, touch.state);
+    - script.execute: handle_on_release
+      x: touch.x
+      state: 'Very Long Press'
 
   on_swipe_left:
     - script.execute: led_on_swipe_left
@@ -1213,6 +1178,54 @@ script:
           red: !lambda "return id(nightlight_color)[0]/100.0;"
           green: !lambda "return id(nightlight_color)[1]/100.0;"
           blue:  !lambda "return id(nightlight_color)[2]/100.0;"
+
+  - id: handle_on_release
+    mode: parallel
+    parameters:
+      x: int
+      state: string
+    - lambda: |-
+        auto button = id(button_lookup)[${button_count}-1][x-1];
+        id(button_held)[button-1]=0;
+        // this will be wrong once every 49.7 days when millis() resets to 0 *shrug*
+        uint32_t button_press_duration = millis() - id(button_press_start_time)[button-1];
+        ESP_LOGD("button", "Button %d released, held for %lu ms (%lu - %lu)", button, button_press_duration, millis(), id(button_press_start_time)[button-1]);
+        bool is_long_press = false;
+        bool is_double_tap = false;
+        if (button_press_duration >= ${long_press_time}) {
+          is_long_press = true;
+          ESP_LOGD("button", "Button %d long pressed", button);
+          switch(button) {
+            case 1: id(long_press_1).publish_state(true); break;
+            case 2: id(long_press_2).publish_state(true); break;
+            case 3: id(long_press_3).publish_state(true); break;
+            case 4: id(long_press_4).publish_state(true); break;
+          }
+        } else {
+          id(button_double_tap)[button-1]++;
+          id(double_tap_timer)->execute(button);
+          // TODO maybe add triple tap?
+          if (id(button_double_tap)[button-1]>1) {
+            is_double_tap = true;
+            id(process_double_tap)->execute(button);
+            id(button_double_tap)[button-1]=0;
+          } else {
+            switch(button) {
+              case 1: id(button_1).publish_state(true); break;
+              case 2: id(button_2).publish_state(true); break;
+              case 3: id(button_3).publish_state(true); break;
+              case 4: id(button_4).publish_state(true); break;
+            }
+          }
+        }
+        switch(button) {
+          case 1: id(dim_led_at_button_1)->execute(is_long_press, is_double_tap); break;
+          case 2: id(dim_led_at_button_2)->execute(is_long_press, is_double_tap); break;
+          case 3: id(dim_led_at_button_3)->execute(is_long_press, is_double_tap); break;
+          case 4: id(dim_led_at_button_4)->execute(is_long_press, is_double_tap); break;
+        }
+    - lambda: >
+        ESP_LOGW("button", "Release Position: %d / State: %d", x, state);
 
 # TODO dim the right LEDs based on the button_count
   - id: led_on_swipe_left
