--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -703,10 +703,7 @@ tx_ultimate_touch:
   on_release:
     - lambda: 'ESP_LOGI("button", "on_release stopping led_on_button_press and bar_go_up_and_down");'
     - script.stop: led_on_button_press
-    - script.execute:
-        id: handle_on_release
-        x: touch.x
-        state: OFF
+    - lambda: id(handle_on_release).execute(touch.x, touch.state);
 
   on_swipe_left:
     - script.execute: led_on_swipe_left
@@ -746,11 +743,8 @@ tx_ultimate_touch:
           - lambda: |-
               auto button = id(button_lookup)[${button_count}-1][touch.x-1];
               id(button_held)[button-1]=0;
+              id(handle_on_release).execute(touch.x, touch.state);
           - script.execute: led_on_long_touch
-          - script.execute:
-              id: handle_on_release
-              x: touch.x
-              state: TRIGGERED
           - switch.turn_on: vibra
           - binary_sensor.template.publish:
              id: very_long_press
