--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -746,8 +746,15 @@ tx_ultimate_touch:
               //id(handle_on_release).execute(touch.x, touch.state);
               id(bars_go_up_and_down).stop();
               id(set_bar_height).execute(0);
+              id(led_on_button_press).stop();
+              switch(touch.x) {
+                case 1: id(dim_led_at_button_1)->execute(true, false); break;
+                case 2: id(dim_led_at_button_2)->execute(true, false); break;
+                case 3: id(dim_led_at_button_3)->execute(true, false); break;
+                case 4: id(dim_led_at_button_4)->execute(true, false); break;
+              }
               // maybe don't do LED effects for the very long touch since it doesn't do anything??
-              id(led_on_long_touch);
+              //id(led_on_long_touch);
           - switch.turn_on: vibra
           - binary_sensor.template.publish:
              id: very_long_press
