--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -748,10 +748,10 @@ tx_ultimate_touch:
               id(set_bar_height).execute(0);
               id(led_on_button_press).stop();
               switch(touch.x) {
-                case 1: id(dim_led_at_button_1)->execute(true, false); break;
-                case 2: id(dim_led_at_button_2)->execute(true, false); break;
-                case 3: id(dim_led_at_button_3)->execute(true, false); break;
-                case 4: id(dim_led_at_button_4)->execute(true, false); break;
+                case 1: id(dim_led_at_button_1).execute(true, false); break;
+                case 2: id(dim_led_at_button_2).execute(true, false); break;
+                case 3: id(dim_led_at_button_3).execute(true, false); break;
+                case 4: id(dim_led_at_button_4).execute(true, false); break;
               }
               // maybe don't do LED effects for the very long touch since it doesn't do anything??
               //id(led_on_long_touch);
@@ -1029,6 +1029,7 @@ script:
           count: ${dim_led_steps}
           then:
             - lambda: |-
+                ESP_LOGD("button", "Dimming button 1");
                 int button = 1;
                 int led_index;
                 if (${button_led_feedback_bottom}) {
