--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -747,6 +747,7 @@ tx_ultimate_touch:
               id(bars_go_up_and_down).stop();
               id(set_bar_height).execute(0);
               id(led_on_button_press).stop();
+              ESP_LOGD("button", "Very Long Touch dim switch %d", touch.x);
               switch(touch.x) {
                 case 1: id(dim_led_at_button_1).execute(true, false); break;
                 case 2: id(dim_led_at_button_2).execute(true, false); break;
